added LDAP stubbed out files

--- a/analyzer/protocol/CMakeLists.txt
+++ b/analyzer/protocol/CMakeLists.txt
@@ -4,6 +4,7 @@ add_subdirectory(dhcp)
 add_subdirectory(dns)
 add_subdirectory(http)
 add_subdirectory(ipsec)
+add_subdirectory(ldap)
 add_subdirectory(openvpn)
 add_subdirectory(tftp)
 add_subdirectory(wireguard)
